ido pool deployment script enhancements

--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ ALCHEMY_API_KEY = CHANGEME
 ACC_1_PRIVATE_KEY = CHANGEME
 ACC_2_PRIVATE_KEY = CHANGEME
 REACT_APP_API_KEY=CHANGEME
-IDO_ID=CHANGEME
+HARDHAT_NETWORK=CHANGEME
+POOL_WALLET=CHANGEME
