audit fixes for EDA-01, SED-01, SED-02, SED-04; confirming SED-03

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ ACC_2_PRIVATE_KEY = CHANGEME
 REACT_APP_API_KEY=CHANGEME
 HARDHAT_NETWORK=CHANGEME
 POOL_WALLET=CHANGEME
+CE_TOKEN_ADDR=CHANGEME
+LP_PAIR_ADDR=CHANGEME
+STAKING_START_TIME=CHANGEME
+STAKING_END_TIME=CHANGEME
